deployment/k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: opticrop
spec:
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
  type: ClusterIP
