deployment/k8s/model-serving-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-serving
  namespace: opticrop
spec:
  selector:
    app: model-serving
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
